Corrected keywords in package.json and updated README.md content

--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
   "keywords": [
     "token",
     "bearer",
+    "bearer-authentication",
     "jwt",
     "intercept",
     "interceptor",
     "request",
     "xhr",
     "fetch",
-    "oauth",
-    "2.0",
-    "oauth",
-    "openid",
-    "connect",
-    "pkce",
-    "msal"
+    "fetch-api",
+    "oauth2",
+    "openid-connect",
+    "auth-code-flow",
+    "pkce-flow",
+    "msal",
+    "msal-js",
+    "azure-active-directory",
+    "microsoft-identity-platform"
   ],
   "author": "Jimmy Leong (Github: appzmonster)",
   "license": "MIT",
